fix: second version

--- a/src/partial/unit/_btn.html
+++ b/src/partial/unit/_btn.html
@@ -1,5 +1,5 @@
 <div class="d-grid col">
-    <button class="btn btn-lg btn-@@btnStyle @@if(context.rounded===true){rounded}" @@if(context.onclick){onclick="@@onclick"}>
+    <button class="btn btn-lg btn-@@btnStyle @@if(context.rounded===true){rounded}" id="submit" type="button" @@if(context.onclick){onclick="@@onclick"}>
         @@btnLabel
     </button>
 </div>
