--- a/src/scss/custom/components/_buttons.scss
+++ b/src/scss/custom/components/_buttons.scss
@@ -1,18 +1,21 @@
 .btn-outline-secondary {
     border-color: $gray-500;
     color: $gray-500;
-    &:hover {
-        border-color: $black;
-        color: $black;
-        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-    }
+    &:hover,
     &:focus,
     &:active {
-        border-color: $primary;
-        background-color: $primary;
-        color: $white;
+        border-color: $black;
+        background-color: $black;
+        color: $white !important;
     }
 }
 .btn-outline-dark {
+    border-color: $black;
+    color: $black !important;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    &:hover,
+    &:focus,
+    &:active {
+        color: $white !important;
+    }
 }
