--- a/src/partial/global/_head.html
+++ b/src/partial/global/_head.html
@@ -21,9 +21,7 @@
         }
         <!-- Global -->
         <link rel="stylesheet" href="assets/css/bootstrap.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/css/intlTelInput.css">
         <link rel="stylesheet" href="assets/css/custom.css">
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
