--- a/src/scss/custom/config/_variables.scss
+++ b/src/scss/custom/config/_variables.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-$path-ui:       "../img/ui/";
+$path-ui:       "../img/";
 $path-uploads:  "../img/uploads/";
 
 $color-facebook:  #3b5998;
