fix: remote version

--- a/src/partial/global/_header.html
+++ b/src/partial/global/_header.html
@@ -1,7 +1,7 @@
 <header class="" id="header">
-    <div class="container-fluid py-60">
+    <div class="container-fluid pt-60 pb-40">
         <div class="text-center">
-            <img src="assets/img/logo.svg" height="75" alt="金門酒廠">
+            <img src="assets/img/logo.png" height="75" alt="金門酒廠">
         </div>
     </div>
 </header>
